fix hold to delete on mobile.

--- a/client/styles/scss/_votes.scss
+++ b/client/styles/scss/_votes.scss
@@ -26,6 +26,10 @@
         right: 0;
         top: 0;
 
+        @media (max-width: $screen-md-max) {
+          padding: 10px;
+        }
+
         .additional-info {
           @include animate-hidden();
           display: inline-block;
